# skia-builder

./: .gitignore  CLAUDE.md  Makefile  README.md  build-skia.py
.github/workflows/: build-skia.yml  create-xcframework.yml
docs/: GRAPHITE_WEBGPU_WASM.md
example/: CMakeLists.txt  main-webgpu.cpp  shell-webgpu.html
patches/: DawnCaps.cpp.patch  README.md  apply-patches.sh  apply_dawn_ios_visionos.py  dawn-build-config.patch  dawn-x11-wayland-support.patch  fix_m149_d3d_backend_surface.patch  library_webgpu.js.patch
